--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div id="yourStakes"></div>
       </div>
     </div>
-  </div>
+  </div><script src="https://cdn.jsdelivr.net/npm/web3@1.10.0/dist/web3.min.js"></script>
 
   <script src="main.js"></script>
 </body>
